test/org/midica/testfiles/failing/eff-flow-note-not-allowed-2.midica
INCLUDE inc/instruments.midica


0: mono_at.note(c).set(100%)
